# nanowire_tdgl

./: .gitignore  AGENTS.md  EXTENDED_FEATURES.md  HOLE_BC_STATUS.md  LICENSE  README.md  environment.yml  pyproject.toml  test_hole_bc_verification.py
examples/: WORKFLOW.md  check_symmetry.py  generate_default_plot.py  isometric_film_3d.py  quick_start.sh  sis_square_with_hole.py  test_extended_features.py  test_flux_trapping.py  verify_indices_bc.py  visualize_solution.py  vortex_3d.py  vortex_entry_2d.py
src/tdgl3d/: __init__.py
src/tdgl3d/analysis/: __init__.py  convergence.py  vortex_counting.py
src/tdgl3d/core/: device.py  material.py  parameters.py  solution.py  state.py
src/tdgl3d/io/: hdf5.py  logging.py
src/tdgl3d/mesh/: holes.py  indices.py
src/tdgl3d/operators/: sparse_operators.py
src/tdgl3d/physics/: applied_field.py  bfield.py  current_density.py  rhs.py
src/tdgl3d/solvers/: integrators.py  newton.py  runner.py  tgcr.py
src/tdgl3d/visualization/: plotting.py
tests/: test_bfield_holes.py  test_bfield_visualization.py  test_current_density.py  test_hole_bc_smoke.py  test_hole_boundary_conditions.py  test_holes_geometry.py  test_indices.py  test_integration.py  test_logging.py  test_operators.py  test_parameters.py  test_phase_extraction.py  test_physics.py  test_physics_nonz_fields.py  test_solvers.py  test_state.py  test_trilayer.py  test_visualization.py  test_vortex_analysis.py  validate_analytical.py
